client/src/main.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  &.mobile-menu-open,
  &.category-menu-open,
  &.loading {
    overflow: hidden;
    // margin-right: 17px;
  }

  &.loading {
    .footer-wrap,
    .user-profile {
      // .home-wrap {
      margin-right: 16px;
    }
  }

  &.mobile-menu-open {
    margin-right: 16px;
  }

  #root {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    text-align: center;

    main {
      flex: 1;
      background-color: #fff;
      display: flex;
      justify-content: center;
    }
  }
}

@media screen and (max-width: 1024px) {
  html,
  body {
    &.mobile-menu-open,
    &.category-menu-open,
    &.loading {
      margin-right: 0;
    }

    &.loading {
      .footer-wrap,
      .user-profile {
        margin-right: 0;
      }
    }

    #root {
      .home-page {
        margin-top: 56px;
      }
    }
  }
}

